--- a/style.css
+++ b/style.css
@@ -71,9 +71,8 @@ body {
 .parrafo:hover{
     opacity: 1;
 }
-
 @media (max-width: 800px) {
     .link-insta__a{
-	padding: 20px 10px;
+	padding: 0;
 	}
 }
