--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body{
 }
 h1{
     margin: 0;
-    margin-left: 30px;
     color: #fff;
     font-family: 'Arsenal', sans-serif;
     font-size: 30px;
@@ -148,3 +147,119 @@ h1{
 .btn-comprar-entrada:hover{
     background: #db2994bb;
 }
+
+/* Media query */
+@media (max-width: 1200px) {
+    .contenedor-fases{
+        width: 320px;
+        height: 570px;
+        margin: 0px 30px;
+    }
+}
+@media (max-width: 1000px) {
+    .contenedor-fases{
+        width: 305px;
+        height: 500px;
+        margin: 0px 15px;
+    }
+    .imagenes-fases{
+        width: 200px;
+        height: 360px;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+    .btn-comprar-entrada{
+        padding: 5px 65px;
+        border-radius: 20px;
+    }
+}
+@media (max-width: 900px) {
+    .section-principal {
+        height: 880px;
+    }    
+    .section-entrada {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        height: 1700px;
+    }
+    .contenedor-fases {
+        margin: 25px 0px;
+    }
+    .info-de-la-party{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        height: 940px;
+    }
+    .lista-de-cosas{
+        margin: 0;
+    }
+    .info-de-la-party{
+        text-align: center;
+    }
+    .info-de-la-party h3{
+        margin: 0;
+        margin-bottom: 15px;
+    }
+    .info-party p {
+        margin-bottom: 25px;
+    }
+    .lista-de-cosas{
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 385px;
+        height: 365px;
+    }
+    .lista-de-cosas ul{
+        margin: 0;
+    }
+    @media (max-width: 700px){
+        .div-section-principal h2 {
+            font-size: 55px;
+        }
+    }
+    @media (max-width: 550px){
+        .section-principal {
+            height: 920px;
+        }
+        .div-section-principal h2 {
+            font-size: 40px;
+            margin-top: 10px;
+        }
+        .div-section-principal h3 {
+            font-size: 20px;
+        }
+    }
+    @media (max-width: 390px){
+        .section-principal {
+            height: 675px;
+        }
+        .div-section-principal h2 {
+            font-size: 30px;
+        }
+        .div-section-principal h3 {
+            font-size: 15px;
+        }
+        .div-section-principal h1{
+            font-size: 20px;
+        }
+        .ir-a-entradas {
+            margin-top: 40px;
+        }
+        .info-de-la-party {
+            height: 700px;
+        }
+        .info-party h3 {
+            font-size: 30px;
+        }
+        .info-party p {
+            font-size: 14px;
+        }
+        .lista-de-cosas {
+            width: 315px;
+        }      
+    }
